--- a/html/index.html
+++ b/html/index.html
@@ -16,12 +16,11 @@
                 <article>
                     <h2>DO YOU KNOW WE CAN PROVIDE FOR YOU ?</h2>
 
-                    <p>
+                    <p class="block_text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem doloribus eius expedita facere
                         id in itaque minus modi nostrum officiis optio, perferendis quam quisquam sed similique vel
                         voluptas? Adipisci eius hic maxime necessitatibus sint vero?
                     </p>
-
                     <p class="link">
                         <a href="http://htmlbook.ru/css/border-radius">Learn More</a>
                     </p>
@@ -30,13 +29,12 @@
             </div>
 
             <div class="block">
+
                 <article class="item">
 
                     <img src="/assets/setting.png" Alt="Setting Icon">
-
                     <h4>Management</h4>
-
-                    <p>
+                    <p class="item_text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ducimus earum ipsa iste
                         modi necessitatibus nostrum porro, quod veniam voluptatibus.
                     </p>
@@ -45,10 +43,8 @@
                 <article class="item">
 
                     <img src="/assets/pencil.png" Alt="Pencil Icon">
-
                     <h4>UI / UX Design</h4>
-
-                    <p>
+                    <p class="item_text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid assumenda est
                         illo nam numquam perferendis, perspiciatis quas repellat sequi.
                     </p>
@@ -57,10 +53,8 @@
                 <article class="item">
 
                     <img src="/assets/diamond.png" Alt="Diamond Icon">
-
                     <h4>Logo / Branding</h4>
-
-                    <p>
+                    <p class="item_text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aperiam cumque deserunt
                         eligendi, eos modi nostrum possimus quidem reprehenderit rerum.
                     </p>
@@ -69,10 +63,8 @@
                 <article class="item">
 
                     <img src="/assets/cursor.png" Alt="Cursor Icon">
-
                     <h4>Animation</h4>
-
-                    <p>
+                    <p class="item_text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ex id maxime praesentium
                         voluptas! Aut autem illo minima mollitia nemo!
                     </p>
